# prova2

./: CMakeLists.txt  FaceClean.cpp  FaceRegistration.cpp  Object Detection.cpp  README.md
src/: 3dfaceDetect.cpp  3dfaceDetect.h  3dfeature.cpp  3dfeatures2D3D.cpp  3dsimple.cpp  FaceRecognition2.cpp  detection.cpp  detection.h  esempio.cpp  ex5.cpp  face.cpp  face.h  recognition.cpp  training.cpp
